--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mangguo</groupId>
-    <artifactId>mangguo-parent</artifactId>
+    <artifactId>mangguo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
