增加新文件

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 
     <modules>
         <module>mangguo-service</module>
+        <module>mangguo-dao</module>
+        <module>mangguo-domain</module>
+        <module>mangguo-api</module>
     </modules>
 
     <properties>
