--- a/mangguo-service/pom.xml
+++ b/mangguo-service/pom.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<groupId>com.yangqingmang</groupId>
+		<artifactId>mangguo</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.yangqingmang</groupId>
@@ -10,6 +16,7 @@
 
 	<name>mangguo-service</name>
 	<description>Demo project for Spring Boot</description>
+
 
 
 </project>
