--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mangguo-dao</module>
         <module>mangguo-domain</module>
         <module>mangguo-api</module>
+        <module>mangguo-web</module>
     </modules>
 
     <properties>
